--- a/css/style.css
+++ b/css/style.css
@@ -41,18 +41,19 @@ h1 {
 	grid-column: 2 / 5;
 	grid-row: 3 / 4;
 	display: flex;
-	height: 400px;
 	margin-top: 15px;
 	overflow-y: auto;
 	justify-items: center;
 	justify-content: space-between;
 	align-content: stretch;
+	width: -webkit-fill-available;
 }
 
 #directions {
 	display: none;
 	flex-direction: column;
 	margin-left: 25px;
+	width: inherit;
 }
 
 #list {
@@ -63,6 +64,7 @@ h1 {
 	background-color: rgba(245, 242, 243, 0.5);
 	backdrop-filter: blur(6px);
 	flex: 0 1 auto;
+	text-align: center;
 }
 
 #list li {
